--- a/addons/ptt_dashboard/static/src/components/TodoView/TodoView.scss
+++ b/addons/ptt_dashboard/static/src/components/TodoView/TodoView.scss
@@ -80,10 +80,10 @@ html.o_dark, .o_dark {
     
     .list-navigation {
       background: #0a0a0a !important;
-      border-bottom: 1px solid #333333 !important;
+      border-bottom: 1px solid #4b5563 !important;
       
       .list-btn {
-        border: 1px solid #333333 !important;
+        border: 1px solid #4b5563 !important;
         background: #040303 !important;
         color: #9ca3af !important;
         
@@ -109,7 +109,7 @@ html.o_dark, .o_dark {
       
       .todo-item {
         background: #040303 !important;
-        border-bottom: 1px solid #333333 !important;
+        border-bottom: 1px solid #4b5563 !important;
         
         &:hover {
           background: #1a1a1a !important;
