--- a/addons/ptt_dashboard/static/src/js/dashboard_selection/dashboard_selection.scss
+++ b/addons/ptt_dashboard/static/src/js/dashboard_selection/dashboard_selection.scss
@@ -33,7 +33,7 @@ html.o_dark, .o_dark {
     .select-option {
       background-color: #0a0a0a !important;
       color: #f3f4f6 !important;
-      border: 1px solid #333333;
+      border: 1px solid #4b5563;
       
       &:hover {
         background-color: #1a1a1a !important;
